client/css/canvas.css
body {
    margin: 0;
}

.header {
    background-color: #002050;
    color: white;
    font-family: Arial, Helvetica, sans-serif;
    display: flex;
    padding: 10px;
}

.header img {
    max-height: 55px;
}

.highlight,
#pxdraw-login {
    color: #b8d532;
}

.text-container {
    display: flex;
    flex-direction: column;
    margin-left: 20px;
    flex-grow: 1;
}

.title {
    font-size: 20px;
}

.description {
    font-size: 15px;
    margin-top: 10px;
}

.main-area {
    display: flex;
}

.palette-container {
    width: 35px;
    display: flex;
    flex-direction: column;
    align-content: center;
}

.palette-button {
    width: 25px;
    height: 25px;
    margin: 9px;
    border: 1px solid black;
    opacity: 0.5;
}

.palette-button.selected {
    border: 3px solid #333333;
    margin: 7px;
    opacity: 1;
}

#canvas-container {
    background-image: url("../img/background_patch.png");
    background-repeat: repeat;
    margin-left: 10px;
    flex-grow: 1;
    height: calc(100vh - 85px);
    border-left: 1px solid black;
}

#canvas {
    image-rendering: -moz-crisp-edges;
    image-rendering: -webkit-optimize-contrast;
    image-rendering: crisp-edges;
    image-rendering: pixelated;
}

#subcanvas {
    visibility: hidden;
}

.tweet-area {
    margin: 10px;
    position: absolute;
    top: 0px;
    right: 0px;
}

#coordinates-container {
    position: absolute;
    text-align: center;
    left: 0px;
    top: 10px;
    width: 70px;
    padding-top: 6px;
    padding-bottom: 6px;
    background-color: #002050;
    font-size: 14px;
    color: #ffffff;
    cursor: move;
    
    font-family: Arial, Helvetica, sans-serif;
}

.header-block-container {
    margin: 10px 10px 0px 10px;
    text-align: center;
    color: white;
}

.header-block-title {
    font-size: 12px;
}

.header-block-main {
    margin-top: 5px;
    font-size: 24px;
}

.header-block-main a {
    color: #cccccc;
    text-decoration: none;
}

.palette-container input {
    position: absolute;
    bottom: 0px;
}

